--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lucidarch/lucid",
+    "name": "paulvl/lucid",
     "description": "An architecture for scalable software.",
     "type": "library",
     "license": "MIT",
